--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -8,7 +8,8 @@
                 <li class="nav-item"><a class="nav-link" href="#">Otros</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Turnos</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Eventos</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Iniciar Sesion</a></li>
+                <li *ngIf="!(authService.loggedIn | async)" class="nav-item"><a class="nav-link" href="#">Iniciar Sesion</a></li>
+                <li *ngIf="(authService.loggedIn | async)" class="nav-item"><a class="nav-link" href="#">Cerrar Sesion</a></li>
             </ul>
         </div>
     </div>
