--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
                         <input class="form-control" type="password" formControlName="password" required=""></div>
                     <button (click)="login()" class="btn btn-info mt-2" type="submit" style="background: rgb(255,126,183); ">Iniciar sesion</button>
                 </form>
-                <p class="mt-3 mb-0"><a class="text-info small" href="#" style="border-color: rgb(255,126,183);"><span style="color: rgb(255, 126, 183);">Olvidaste tu email o tu contraseña?</span></a></p>
+                <p [routerLink]="'/registro'" class="mt-3 mb-0"><a class="text-info small" href="#" style="border-color: rgb(255,126,183);"><span style="color: rgb(255, 126, 183);">No tenes una cuenta? Registrate </span></a></p>
             </div>
         </div>
         <div class="col-lg-6 d-flex align-items-end" id="bg-block" style="background-image: url(&quot;assets/fondo-login.jpg&quot;);background-size: cover;background-position: center center;">
