logica ver refugios para unirme funcionando

--- a/src/app/pages/crear-refugio/crear-refugio.component.html
+++ b/src/app/pages/crear-refugio/crear-refugio.component.html
@@ -15,22 +15,19 @@
                         </div>
                     </div>
                     <div class="col-md-6 text-start">
-                        <div class="mb-3"><label class="form-label" for="username"><strong>Telefono</strong></label><input formControlName="telefono" class="form-control" type="" id="password" placeholder="011378490"></div>
+                        <div class="mb-3"><label class="form-label" for="username"><strong>Pais</strong></label><input formControlName="pais" class="form-control" type="" id="password" placeholder="Argentina"></div>
                     </div>
                     <div class="col-md-6 text-start">
-                        <div class="mb-3"><label class="form-label" for="username"><strong>Informacion adicional</strong></label><input formControlName="informacion" class="form-control" type="" id="verifyPassword" placeholder="Nos dedicamos al rescate de animales"></div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3"><label class="form-label" for="username"><strong>Pais</strong></label><input formControlName="pais" class="form-control" type="" id="verifyPassword" placeholder="Argentina"></div>
-                    </div>
-                    <div class="col-md-6">
                         <div class="mb-3"><label class="form-label" for="username"><strong>Provincia</strong></label><input formControlName="provincia" class="form-control" type="" id="verifyPassword" placeholder="Cordoba"></div>
                     </div>
                     <div class="col-md-6">
-                        <div class="mb-3"><label class="form-label" for="city"><strong>Ciudad</strong></label><input formControlName="ciudad" class="form-control" type="text" id="cityId" placeholder="Villa Carlos Paz" name="city" required=""></div>
+                        <div class="mb-3"><label class="form-label" for="username"><strong>Ciudad</strong></label><input formControlName="ciudad" class="form-control" type="" id="verifyPassword" placeholder="Villa Carlos Paz"></div>
                     </div>
                     <div class="col-md-6">
-                        <div class="mb-3"><label class="form-label" for="address"><strong>Direccion</strong></label><input formControlName="direccion" class="form-control" type="text" placeholder="General paz 196" name="address"></div>
+                        <div class="mb-3"><label class="form-label" for="username"><strong>Telefono</strong></label><input formControlName="telefono" class="form-control" type="" id="verifyPassword" placeholder="011378490"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3"><label class="form-label" for="city"><strong>Informacion Adicional</strong></label><input formControlName="informacion" class="form-control" type="text" id="cityId" placeholder="Nos dedicamos a..." name="city" required=""></div>
                     </div>
                     <div class="col-md-6">
                         <div class="mb-3"><label class="form-label" for="address"><strong>Castraciones</strong></label></div>
