--- a/src/app/pages/unirse-refugio/unirse-refugio.component.html
+++ b/src/app/pages/unirse-refugio/unirse-refugio.component.html
@@ -6,7 +6,7 @@
                     <div class="col-xl-12 text-center mb-3">
                         <h3><strong><span style="color: rgb(255, 126, 183);">Si sos voluntario de un refugio, unete!&nbsp;</span></strong></h3>
                     </div>
-                    <div class="col">
+                    <div *ngFor="let refugio of refugios" class="col">
                         <div class="table-responsive" id="myTable">
                             <table class="table table-striped table-sm table-bordered">
                                 <thead>
@@ -18,8 +18,8 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>Cell 1</td>
-                                        <td>Cell 2</td>
+                                        <td>{{refugio.refugio_nombre}}</td>
+                                        <td>{{refugio.refugio_descripcion}}</td>
                                         <td class="text-center"><button class="btn btn-primary" type="button" style="color: var(--bs-emphasis-color);background: rgb(255,126,183);"><i class="far fa-user"></i></button><a class="del-row" href="javascript:void(0);"></a></td>
                                     </tr>
                                 </tbody>
