ver refugio por id funcionando

--- a/src/app/pages/ver-refugio/ver-refugio.component.html
+++ b/src/app/pages/ver-refugio/ver-refugio.component.html
@@ -5,7 +5,7 @@
             </div>
             <div class="row" style="margin-right: 0px;margin-left: 0px;">
                 <div class="col text-center">
-                    <h1 style="color: rgb(255,126,183);">Nombre del refugio</h1>
+                    <h1 style="color: rgb(255,126,183);">{{refugio.data.refugio_nombre}}</h1>
                 </div>
             </div>
             <div class="row justify-content-center" style="margin-right: 0px;margin-left: 0px;margin-top: 10px; margin-bottom: 30px;">
@@ -19,7 +19,7 @@
                                             <p class="labels"><strong>Refugio</strong></p>
                                         </div>
                                         <div class="col">
-                                            <p class="labels">Maria Candelaria Sobol</p>
+                                            <p class="labels">{{refugio.data.refugio_nombre}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -27,7 +27,7 @@
                                             <p class="labels"><strong>Teléfono</strong></p>
                                         </div>
                                         <div class="col">
-                                            <p class="labels">3541378490</p>
+                                            <p class="labels">{{refugio.data.refugio_telefono}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -35,7 +35,7 @@
                                             <p class="labels"><strong>País</strong></p>
                                         </div>
                                         <div class="col">
-                                            <p class="labels">Argentina</p>
+                                            <p class="labels">{{refugio.data.refugio_pais}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -43,7 +43,7 @@
                                             <p class="labels"><strong>Provincia</strong></p>
                                         </div>
                                         <div class="col">
-                                            <p class="labels">Cordoba</p>
+                                            <p class="labels">{{refugio.data.refugio_provincia}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -51,7 +51,7 @@
                                             <p class="labels"><strong>Ciudad</strong></p>
                                         </div>
                                         <div class="col">
-                                            <p class="labels">Villa Carlos Paz</p>
+                                            <p class="labels">{{refugio.data.refugio_ciudad}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -59,7 +59,7 @@
                                             <p class="labels"><strong>Informacion adicional</strong></p>
                                         </div>
                                         <div class="col">
-                                            <p class="labels">Rescatamos animales</p>
+                                            <p class="labels">{{refugio.data.refugio_descripcion}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
