--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -23,7 +23,11 @@
                     <button (click)="registro()" class="btn btn-info mt-2" type="submit" style="background: linear-gradient(#ff7eb7, #b6c4ff), rgb(255,126,183);border-style: none;">Registrarse</button>
                 </form>
                 
-                <p (click)="redireccionLogin()" class="mt-3 mb-0"><a class="text-info small" href="#" style="border-color: rgb(255,126,183);"><span style="color: rgb(255, 126, 183);">Ya tenes una cuenta? Inicia Sesion</span></a></p>
+                <p class="mt-3 mb-0">
+                    <a class="text-info small" href="#" style="border-color: rgb(255,126,183);" [routerLink]="['/iniciar-sesion']">
+                        <span style="color: rgb(255, 126, 183);">Ya tenes una cuenta? Inicia Sesion</span>
+                    </a>
+                </p>
             </div>
         </div>
         <div class="col-lg-6 d-flex align-items-end" id="bg-block" style="background-image: url(&quot;assets/fondo-login.jpg&quot;);background-size: cover;background-position: center center;">
