--- a/src/app/pages/unirse-refugio/unirse-refugio.component.html
+++ b/src/app/pages/unirse-refugio/unirse-refugio.component.html
@@ -1,36 +1,40 @@
-<div>
-    <div class="container">
-        <section class="mt-4">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12 text-center mb-3">
-                        <h3><strong><span style="color: rgb(255, 126, 183);">Si sos voluntario de un refugio, unete!&nbsp;</span></strong></h3>
-                    </div>
-                    <div *ngFor="let refugio of refugios" class="col">
-                        <div class="table-responsive" id="myTable">
-                            <table class="table table-striped table-sm table-bordered">
-                                <thead>
-                                    <tr>
-                                        <th><span style="color: rgb(255, 126, 183);">Refugio</span></th>
-                                        <th><span style="color: rgb(255, 126, 183);">Descripcion</span></th>
-                                        <th class="text-center" style="width: 50px;"><span style="color: rgb(255, 126, 183);">Asociarme</span></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>{{refugio.refugio_nombre}}</td>
-                                        <td>{{refugio.refugio_descripcion}}</td>
-                                        <td class="text-center"><button (click)="unirseRefugio(refugio.refugio_id)" class="btn" type="button" style="color: var(--bs-emphasis-color);background: rgb(255,126,183);"><i class="far fa-user"></i>Enviar Solicitud</button><a class="del-row" href="javascript:void(0);"></a></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+<div class="container">
+    <section class="mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12 text-center mb-3">
+                    <h3><strong><span style="color: rgb(255, 126, 183);">Si sos voluntario de un refugio, ¡unite!</span></strong></h3>
+                </div>
+                <div class="col-xl-12">
+                    <div class="table-responsive" id="myTable">
+                        <table class="table table-striped table-sm table-bordered">
+                            <thead>
+                                <tr>
+                                    <th><span style="color: rgb(255, 126, 183);">Refugio</span></th>
+                                    <th><span style="color: rgb(255, 126, 183);">Descripción</span></th>
+                                    <th class="text-center" style="width: 150px;"><span style="color: rgb(255, 126, 183);">Acciones</span></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let refugio of refugios">
+                                    <td>{{refugio.refugio_nombre}}</td>
+                                    <td>{{refugio.refugio_descripcion}}</td>
+                                    <td class="text-center">
+                                        <div class="btn-group btn-group-sm" role="group" aria-label="Acciones">
+                                            <button (click)="unirseRefugio(refugio.refugio_id)" class="btn" style="color: var(--bs-emphasis-color);background: rgb(255,126,183); margin-right: 10px;" type="button">Enviar Solicitud</button>
+                                            <button (click)="verRefugio(refugio.refugio_id)" class="btn" style="color: var(--bs-emphasis-color);background: rgb(255,126,183);" type="button">Ver Detalles</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 </div>
+
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/js/Dynamically-Add-Remove-Table-Row-style.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
