--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -36,11 +36,29 @@
                         <li><a class="dropdown-item" href="#">Mascotas Encontradas</a></li>
                         <!-- Si está logueado, mostrar la opción adicional -->
                         <li *ngIf="authService.loggedIn | async"><a class="dropdown-item" href="#" [routerLink]="['/crear-publicacion']">Publicar una Mascota</a></li>
-                        <li *ngIf="authService.loggedIn | async"><a class="dropdown-item" href="#" [routerLink]="['/crear-publicacion']">Ver mis publicaciones</a></li>
+                        <!-- <li *ngIf="authService.loggedIn | async"><a class="dropdown-item" href="#" [routerLink]="['/crear-publicacion']">Ver mis publicaciones</a></li> -->
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#" [routerLink]="['/eventos']">Eventos</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" [routerLink]="['/turnos']">Turnos</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="eventosDropDown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Eventos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="turnosDropdown">
+                        <li *ngIf="authService.loggedIn | async"><a class="dropdown-item" href="#" [routerLink]="['/eventos']">Crear evento</a></li>
+                        <li><a class="dropdown-item" href="#" [routerLink]="['/ver-eventos']">Ver Eventos</a></li>
+                        <!-- Si está logueado, mostrar la opción adicional -->
+                    </ul>
+                </li>
+                <li *ngIf="authService.loggedIn | async" class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="turnosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Turnos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="turnosDropdown">
+                        <li><a class="dropdown-item" href="#" [routerLink]="['/turnos']">Solicitar turno</a></li>
+                        <li><a class="dropdown-item" href="#" [routerLink]="['/mis-turnos']">Mis Turnos</a></li>
+                        <!-- Si está logueado, mostrar la opción adicional -->
+                    </ul>
+                </li>
                 <!-- Mostrar Mis Mascotas si está logueado -->
                 <li *ngIf="authService.loggedIn | async" class="nav-item"><a class="nav-link" href="#" [routerLink]="['/mis-mascotas']">Mis Mascotas</a></li>
                 <li *ngIf="authService.loggedIn | async" class="nav-item"><a class="nav-link" href="#" [routerLink]="['/perfil']">Mi perfil</a></li>
