--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="card shadow mb-3">
         <div class="card-header py-3">
-            <p class="text-primary m-0 fw-bold"><span style="color: rgb(255, 126, 183);">Registrar Refugio</span></p>
+            <p class="text-primary m-0 fw-bold"><span style="color: rgb(255, 126, 183);">Nuevo Evento</span></p>
         </div>
         <div class="card-body">
             <form [formGroup]="form">
