voluntarios y donaciones listo

--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -71,7 +71,8 @@
                     <ul class="dropdown-menu" aria-labelledby="turnosDropdown">
                         <li><a class="dropdown-item" href="#" [routerLink]="['/mi-refugio']">Ver mi refugio</a></li>
                         <li><a class="dropdown-item" href="#" [routerLink]="['/ver-turnos-refugio']">Ver mis turnos</a></li>
-                        <li><a class="dropdown-item" href="#" [routerLink]="['/mis-turnos']">Ver donaciones recibidas</a></li>
+                        <li><a class="dropdown-item" href="#" [routerLink]="['/donaciones']">Ver donaciones recibidas</a></li>
+                        <li><a class="dropdown-item" href="#" [routerLink]="['/solicitudes']">Ver solicitudes Voluntarios</a></li>
                         <!-- Si está logueado, mostrar la opción adicional -->
                     </ul>
                 </li>
