--- a/src/app/pages/donaciones-refugio/donaciones-refugio.component.html
+++ b/src/app/pages/donaciones-refugio/donaciones-refugio.component.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 text-center mb-3">
-                    <h3><strong><span style="color: rgb(255, 126, 183);">Mis turnos</span></strong></h3>
+                    <h3><strong><span style="color: rgb(255, 126, 183);">Donaciones recibidas</span></strong></h3>
                 </div>
                 <div class="col-xl-12">
                     <div class="table-responsive" id="myTable">
@@ -11,20 +11,21 @@
                             <thead>
                                 <tr>
                                     <th><span style="color: rgb(255, 126, 183);">Usuario</span></th>
-                                    <th><span style="color: rgb(255, 126, 183);">Fecha Turno</span></th>
-                                    <th><span style="color: rgb(255, 126, 183);">Telefono</span></th>
+                                    <th><span style="color: rgb(255, 126, 183);">Fecha Donacion</span></th>
+                                    <th><span style="color: rgb(255, 126, 183);">Monto</span></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let turno of turnos">
-                                    <td>{{turno.usuario.nombre}} {{turno.usuario.apellido}}</td>
-                                    <td>{{ turno.turno_fecha | date: 'dd/MM/yyyy HH:mm' }}</td>
-                                    <td>{{turno.usuario.telefono}}</td>
+                                <tr *ngFor="let donacion of donaciones">
+                                    <td>{{donacion.usuario.nombre}} {{donacion.usuario.apellido}}</td>
+                                    <td>{{ donacion.donacion_fecha | date: 'dd/MM/yyyy HH:mm' }}</td>
+                                    <td>{{donacion.donacion_monto}}</td>
                                 </tr>
                             </tbody>
                         </table>
+
                         <div class="col-xl-12 text-center mb-3">
-                            <h3 ngIf="mostrarMensaje"><strong><span style="color: rgb(255, 126, 183);">No registra turnos</span></strong></h3>
+                            <h3><strong><span style="color: rgb(255, 126, 183);">No recibio donaciones</span></strong></h3>
                         </div>
                     </div>
                 </div>
